--- a/app/src/main/res/layout/swipe_item.xml
+++ b/app/src/main/res/layout/swipe_item.xml
@@ -34,14 +34,15 @@
 
         <TextView
             android:id="@+id/time"
-            android:text="5小时"
-            android:textSize="15sp"
-            android:textColor="#7b7c98"
-            android:lineSpacingExtra="8sp"
-            android:layout_toLeftOf="@id/arraw"
-            android:layout_centerVertical="true"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toLeftOf="@id/arraw"
+            android:lineSpacingExtra="8sp"
+            android:text="5小时"
+            android:textColor="#7b7c98"
+            android:textSize="15sp"
+            android:visibility="gone" />
 
         <ImageView
             android:id="@+id/arraw"
