--- a/app/src/main/res/layout/dialog_recommend.xml
+++ b/app/src/main/res/layout/dialog_recommend.xml
@@ -14,8 +14,8 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
-        android:text="推荐码填写奖励"
-        android:textColor="@color/colorPrimary"
+        android:text="任务开启步骤"
+        android:textColor="@color/color_393939"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -64,9 +64,9 @@
         android:backgroundTint="@color/colorPrimary"
         android:gravity="center"
         android:paddingLeft="12dp"
-        android:paddingTop="5dp"
+        android:paddingTop="8dp"
         android:paddingRight="12dp"
-        android:paddingBottom="5dp"
+        android:paddingBottom="8dp"
         android:text="推荐码:LRHN7T5O"
         android:textAppearance="?android:attr/textAppearanceLargeInverse"
         android:textColor="#ffffff"
@@ -85,6 +85,7 @@
         android:layout_marginEnd="8dp"
         android:text="点击复制"
         android:textColor="@color/warning"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/btn_recommend_code"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btn_recommend_code"
