--- a/app/src/main/res/layout/listview_typeitem.xml
+++ b/app/src/main/res/layout/listview_typeitem.xml
@@ -32,6 +32,7 @@
         android:text="免费"
         android:textSize="15sp"
         android:textColor="#7b7c98"
+        android:visibility="gone"
         android:lineSpacingExtra="8sp"
         android:layout_centerVertical="true"
         android:layout_alignParentEnd="true"
