--- a/app/src/main/res/layout/dialog_share_app.xml
+++ b/app/src/main/res/layout/dialog_share_app.xml
@@ -46,12 +46,11 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_colse"
-        android:layout_width="90dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="16dp"
-        android:background="@color/colorPrimary"
         android:backgroundTint="@color/colorPrimary"
         android:gravity="center"
         android:paddingLeft="12dp"
@@ -76,7 +75,6 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="16dp"
-        android:background="@color/colorPrimary"
         android:backgroundTint="@color/colorPrimary"
         android:gravity="center"
         android:paddingLeft="12dp"
