--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -180,18 +180,37 @@
         android:layout_marginEnd="16dp"
         android:backgroundTint="@color/color_white"
         android:gravity="center_vertical"
-        android:text="使用帮助"
+        android:text="常见问题"
         android:drawableLeft="@drawable/help"
         android:drawablePadding="12dp"
         android:textAppearance="?android:attr/textAppearanceLargeInverse"
         android:textColor="@color/color_text"
         android:textSize="14sp"
         android:textStyle="bold"
-        android:visibility="gone"
         app:cornerRadius="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_feedback" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_warming"
+        android:layout_width="0dp"
+        android:layout_height="64dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:backgroundTint="@color/color_white"
+        android:gravity="center_vertical"
+        android:text="软件声明"
+        android:drawableLeft="@drawable/warning"
+        android:drawablePadding="12dp"
+        android:textAppearance="?android:attr/textAppearanceLargeInverse"
+        android:textColor="@color/color_text"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        app:cornerRadius="4dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_help" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_about"
@@ -211,7 +230,23 @@
         app:cornerRadius="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_help" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_warming" />
+
+    <TextView
+        android:id="@+id/tv_info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="【捡豆子助手完全免费，如遇到售卖请举报！】"
+        android:textColor="#50000000"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_about"
+ />
+
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_exit"
