--- a/app/src/main/res/layout/layout_bar.xml
+++ b/app/src/main/res/layout/layout_bar.xml
@@ -7,7 +7,7 @@
 
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tv_version"
         android:layout_width="wrap_content"
         android:layout_height="68dp"
         android:layout_marginStart="16dp"
