--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -8,6 +8,12 @@
         android:title="任务" />
 
     <item
+        android:id="@+id/navigation_coupon"
+        android:icon="@drawable/icon_coupon"
+        android:iconTint="@drawable/icon_coupon"
+        android:title="优惠券" />
+
+    <item
         android:id="@+id/navigation_dashboard"
         android:icon="@drawable/ic_dashboard_black_24dp"
         android:iconTint="@drawable/ic_dashboard_black_24dp"
