一键添加任务 权限申请优化

--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F4F4F4"
-    tools:context="com.ch.activity.MainActivity2">
+    tools:context="com.ch.activity.MainActivity">
 
     <include
         android:id="@+id/include_bar"
