--- a/app/src/main/res/layout/floatview.xml
+++ b/app/src/main/res/layout/floatview.xml
@@ -27,6 +27,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:layout_marginStart="2dp"
+        android:layout_marginEnd="2dp"
         android:gravity="center"
         android:text="@string/app_name"
         android:textColor="@color/colorPrimary"
