--- a/app/src/main/res/layout/fragment_mainpage.xml
+++ b/app/src/main/res/layout/fragment_mainpage.xml
@@ -56,7 +56,7 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginBottom="12dp"
-                    android:text="脚本点击及判断按钮位置需要辅助服务提供支持，不会窃取界面上的内容，只会分析界面层次和显示大小并用于判断按钮位置。"
+                    android:text="脚本点击及判断按钮位置需要辅助服务提供支持，用于分析界面层次并用于判断按钮位置。"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
