--- a/app/src/main/res/layout/dialog_input_recommend.xml
+++ b/app/src/main/res/layout/dialog_input_recommend.xml
@@ -7,6 +7,21 @@
     android:orientation="vertical">
 
 
+    <TextView
+        android:id="@+id/textView26"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:text="填写推荐码"
+        android:textColor="@color/color_text"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <EditText
         android:id="@+id/edit_input"
         android:layout_width="0dp"
@@ -14,16 +29,16 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
+        android:background="@drawable/shape_input_bg"
         android:ems="10"
-        android:hint="请输入好友邀请码"
+        android:gravity="center_vertical"
+        android:hint="请输入好友推荐码"
+        android:inputType="textPersonName"
         android:paddingLeft="16dp"
         android:textSize="14sp"
-        android:gravity="center_vertical"
-        android:background="@drawable/shape_input_bg"
-        android:inputType="textPersonName"
         app:layout_constraintEnd_toStartOf="@+id/btn_send"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView26" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_send"
@@ -48,8 +63,9 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
+        android:text="输入好友推荐码后，刷金币任务软件的推荐邀请码都更新为好友的"
         android:textSize="12sp"
-        android:text="输入好友邀请码后，刷金币任务软件的推荐邀请码都更新为好友的"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/edit_input"
