--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -104,10 +104,10 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="4dp"
                 android:backgroundTint="@color/color_white"
-                android:gravity="center_vertical"
-                android:text="输入邀请码"
                 android:drawableLeft="@drawable/icon_invite"
                 android:drawablePadding="12dp"
+                android:gravity="center_vertical"
+                android:text="推荐码"
                 android:textAppearance="?android:attr/textAppearanceLargeInverse"
                 android:textColor="@color/color_text"
                 android:textSize="14sp"
@@ -125,10 +125,10 @@
                 android:layout_marginStart="4dp"
                 android:layout_marginEnd="16dp"
                 android:backgroundTint="@color/color_white"
-                android:gravity="center_vertical"
-                android:text="推荐赚钱"
                 android:drawableLeft="@drawable/icon_recommend"
                 android:drawablePadding="12dp"
+                android:gravity="center_vertical"
+                android:text="推荐赚钱"
                 android:textAppearance="?android:attr/textAppearanceLargeInverse"
                 android:textColor="@color/color_text"
                 android:textSize="14sp"
